# goblock

./: CMakeLists.txt  LICENSE  README.md  config.h.in
include/: utils.h  world.h
include/control/: camera.h
include/ui/: text.h
include/world/: chunk.h  world.h
shaders/: text.fs  text.vs
src/: main.cpp  utils.cpp  world.cpp
src/block/: block.cpp  block.h
src/control/: camera.cpp  camera.h  control.cpp  control.h
src/ui/: text.cpp
src/utils/: utils.cpp  utils.h
src/world/: chunk.cpp  chunk.h  world.cpp  world.h
